--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>XDML</title>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style3.css">
-  <link rel="stylesheet" href="css/_sections.scss">
+  <link rel="stylesheet" href="css/style2.css">
   <link rel="stylesheet" href="css/Style1.css">
   <link href="https://cdn.jsdelivr.net/gh/vaibhav111tandon/vov.css@latest/vov.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="fonts/style.css">
